--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,12 +1,7 @@
-/* applies to anything of class "example-class-selector" */
-.example-class-selector {
-	margin-top: 2em;
-}
-
 /* applies to any <p> descendants of an element of class "example-class-selector" */
-.example-class-selector p {
+.project p {
 	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
-	color: #CC00AA;
+	color: 3e206d;
 }
 
 /* this style exists to make it obvious that you've successfully linked
@@ -17,8 +12,8 @@ body {
 }
 
 .jumbotron {
-	position: relative;
-	background: none;
+     position: relative;
+     background: none;
 }
 
 .jumbotron:after {
@@ -30,5 +25,5 @@ body {
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;   
 }
